--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -9,19 +9,120 @@
     android:clickable="false"
     android:orientation="vertical"
     android:weightSum="1"
-    tools:clickable="false">
+    tools:clickable="false"
+    android:background="@drawable/mainbackground">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.03">
 
+        <FrameLayout
+            android:id="@+id/frameLayout2"
+            android:layout_width="342dp"
+            android:layout_height="105dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/framebackground" >
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Equipment Survey"
+                    app:layout_constraintLeft_toRightOf="@+id/textView22"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView22" />
+
+                <TextView
+                    android:id="@+id/textView22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Node Survey"
+                    app:layout_constraintLeft_toRightOf="@+id/textView21"
+                    android:layout_marginLeft="24dp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView21" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="UG Survey"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ugimageButton"
+                    android:layout_marginLeft="33dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <ImageButton
+                    android:id="@+id/eqpimageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_bias="0.937"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/btn_star_big_off" />
+
+                <ImageButton
+                    android:id="@+id/ugimageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_bias="0.064"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/btn_star_big_off" />
+
+                <ImageButton
+                    android:id="@+id/nodeimageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="75dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_bias="0.71"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/btn_star_big_off"
+                    app:layout_constraintRight_toLeftOf="@+id/eqpimageButton" />
+
+            </android.support.constraint.ConstraintLayout>
+
+        </FrameLayout>
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="145dp"
             android:layout_height="41dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="57dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="207dp"
             android:layout_weight="0.03"
             android:clickable="false"
             android:contextClickable="false"
@@ -29,61 +130,33 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="49dp"
-            android:text="UG Survey"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <CheckBox
-            android:id="@+id/checkBox2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="32dp"
-            android:text="Node Survey"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
-
-        <CheckBox
-            android:id="@+id/checkBox3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="32dp"
-            android:text="CCU Survey"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
-
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:text="Survey Area"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="145dp"
             android:layout_height="41dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="29dp"
+            android:layout_marginStart="35dp"
             android:ems="10"
             android:hint="eg. 3SAM-01"
             android:inputType="textPersonName"
             android:textAppearance="@style/amu_Bubble.TextAppearance.Light"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView"
             app:layout_constraintLeft_toRightOf="@+id/textView" />
+
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
