--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:weightSum="1"
     tools:clickable="false"
-    android:background="@drawable/mainbackground">
+    android:background="@drawable/mainblue">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,15 +19,15 @@
 
         <FrameLayout
             android:id="@+id/frameLayout2"
-            android:layout_width="342dp"
+            android:layout_width="match_parent"
             android:layout_height="105dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
+            android:background="@drawable/bluegradient"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/framebackground" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -37,34 +37,34 @@
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Equipment Survey"
-                    app:layout_constraintLeft_toRightOf="@+id/textView22"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
+                    android:text="Equipment Survey"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/textView22" />
+                    app:layout_constraintLeft_toRightOf="@+id/textView22"
+                    app:layout_constraintRight_toRightOf="parent" />
 
                 <TextView
                     android:id="@+id/textView22"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="35dp"
                     android:text="Node Survey"
-                    app:layout_constraintLeft_toRightOf="@+id/textView21"
-                    android:layout_marginLeft="24dp"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/textView21" />
+                    app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
+                    app:layout_constraintLeft_toRightOf="@+id/textView21" />
 
                 <TextView
                     android:id="@+id/textView21"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="UG Survey"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/ugimageButton"
-                    android:layout_marginLeft="33dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="33dp"
+                    android:layout_marginTop="8dp"
+                    android:text="UG Survey"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/ugimageButton"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <ImageButton
@@ -106,11 +106,11 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintHorizontal_bias="0.71"
+                    app:layout_constraintHorizontal_bias="0.66"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/eqpimageButton"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/btn_star_big_off"
-                    app:layout_constraintRight_toLeftOf="@+id/eqpimageButton" />
+                    app:srcCompat="@drawable/btn_star_big_off" />
 
             </android.support.constraint.ConstraintLayout>
 
