--- a/demo/res/layout/details_view.xml
+++ b/demo/res/layout/details_view.xml
@@ -19,6 +19,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <FrameLayout
+            android:layout_width="186dp"
+            android:layout_height="149dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="41dp"
+            app:layout_constraintHorizontal_bias="1.0">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/acc_green_logo_resized" />
+        </FrameLayout>
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="155dp"
@@ -343,7 +361,9 @@
             android:inputType="textPersonName"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
             app:layout_constraintLeft_toRightOf="@+id/textView5"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/textView16"
@@ -353,7 +373,8 @@
             android:layout_marginTop="24dp"
             android:text="Duct ID"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp" />
 
         <EditText
             android:id="@+id/ductIdText"
@@ -366,7 +387,9 @@
             android:inputType="textPersonName"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
             app:layout_constraintLeft_toRightOf="@+id/textView16"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
 
     </android.support.constraint.ConstraintLayout>
