--- a/demo/res/layout/main.xml
+++ b/demo/res/layout/main.xml
@@ -74,7 +74,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="40dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -130,19 +129,22 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="151dp"
-            android:layout_height="251dp"
+            android:layout_width="175dp"
+            android:layout_height="178dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="2dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.929"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editText"
-            app:srcCompat="@drawable/acc_green_logo_black" />
+            app:layout_constraintVertical_bias="0.303"
+            android:src="@drawable/acc_green_logo_resized" />
 
         <Button
             android:id="@+id/button1"
