--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/ugbutton"
             android:layout_width="170dp"
             android:layout_height="76dp"
             android:layout_marginLeft="8dp"
@@ -40,7 +40,7 @@
             android:layout_marginEnd="8dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/nodebutton"
             android:layout_width="368dp"
             android:layout_height="wrap_content"
             android:text="Upload Image"
