--- a/demo/res/layout/fragment_survey.xml
+++ b/demo/res/layout/fragment_survey.xml
@@ -1,13 +1,95 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.google.maps.android.utils.demo.SurveyFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/ugbutton"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="46dp"
+            android:text="UG / Aerial"
+            android:theme="@style/MyButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/nodebutton"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="Node"
+            android:theme="@style/MyButton"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/ugbutton" />
+
+        <Button
+            android:id="@+id/eqpbutton"
+            android:layout_width="105dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:text="Equipment"
+            android:theme="@style/MyButton"
+            app:layout_constraintBaseline_toBaselineOf="@+id/ugbutton"
+            app:layout_constraintLeft_toRightOf="@+id/ugbutton"
+            app:layout_constraintRight_toLeftOf="@+id/nodebutton" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="148dp"
+            android:text="SAM Code"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/survey_samcodetext"
+            app:layout_constraintTop_toBottomOf="@+id/ugbutton" />
+
+        <EditText
+            android:id="@+id/survey_samcodetext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:hint="e.g. 3SAM-01"
+            android:inputType="textPersonName"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Button
+            android:id="@+id/survey_submitbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="82dp"
+            android:text="SUBMIT"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/survey_samcodetext" />
+    </android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
