--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -40,7 +40,7 @@
             android:layout_marginEnd="8dp" />
 
         <Button
-            android:id="@+id/nodebutton"
+            android:id="@+id/fibereqpbutton"
             android:layout_width="368dp"
             android:layout_height="wrap_content"
             android:text="Upload Image"
