--- a/demo/res/layout/fragment_construction.xml
+++ b/demo/res/layout/fragment_construction.xml
@@ -1,13 +1,76 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.maps.android.utils.demo.ConstructionFragment">
+    tools:context="com.google.maps.android.utils.demo.SurveyFragment"
+    android:background="@drawable/bluegradient">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:fontFamily="serif-monospace"
+            android:text="SAM Code"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:typeface="serif"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/survey_samcodetext"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="136dp" />
+
+        <EditText
+            android:id="@+id/construction_samcodetext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:ems="10"
+            android:fontFamily="serif-monospace"
+            android:hint="e.g. 3SAM-01"
+            android:inputType="textPersonName"
+            android:singleLine="true"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Button
+            android:id="@+id/construction_submitbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="serif-monospace"
+            android:text="SUBMIT"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/construction_samcodetext"
+            android:layout_marginBottom="93dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="93dp"
+            android:layout_height="93dp"
+            app:srcCompat="@drawable/infalogo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="44dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.962" />
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
