--- a/demo/res/layout/fragment_survey.xml
+++ b/demo/res/layout/fragment_survey.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.maps.android.utils.demo.SurveyFragment">
+    tools:context="com.google.maps.android.utils.demo.SurveyFragment"
+    android:background="@drawable/bluegradient">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,45 +16,50 @@
 
         <Button
             android:id="@+id/ugbutton"
-            android:layout_width="105dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="2dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="46dp"
-            android:text="UG / Aerial"
+            android:fontFamily="serif-monospace"
+            android:text="UG/Aerial"
             android:theme="@style/MyButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/nodebutton"
+            android:id="@+id/fibereqpbutton"
             android:layout_width="105dp"
-            android:layout_height="wrap_content"
+            android:layout_height="59dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="Node"
+            android:layout_marginTop="46dp"
+            android:fontFamily="serif-monospace"
+            android:text="Fiber Equipment"
             android:theme="@style/MyButton"
-            android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@+id/ugbutton" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <Button
-            android:id="@+id/eqpbutton"
-            android:layout_width="105dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/coppereqpbutton"
+            android:layout_width="109dp"
+            android:layout_height="59dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:text="Equipment"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="46dp"
+            android:fontFamily="serif-monospace"
+            android:text="Copper Equipment"
             android:theme="@style/MyButton"
-            app:layout_constraintBaseline_toBaselineOf="@+id/ugbutton"
+            app:layout_constraintRight_toLeftOf="@+id/fibereqpbutton"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/ugbutton"
-            app:layout_constraintRight_toLeftOf="@+id/nodebutton" />
+            android:layout_marginLeft="0dp" />
 
         <TextView
             android:id="@+id/textView"
@@ -61,8 +67,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="148dp"
+            android:layout_marginTop="75dp"
+            android:fontFamily="serif-monospace"
             android:text="SAM Code"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:typeface="serif"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/survey_samcodetext"
@@ -74,8 +83,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:ems="10"
+            android:fontFamily="serif-monospace"
             android:hint="e.g. 3SAM-01"
             android:inputType="textPersonName"
+            android:singleLine="true"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -86,10 +97,27 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="82dp"
+            android:fontFamily="serif-monospace"
             android:text="SUBMIT"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/survey_samcodetext" />
+            app:layout_constraintTop_toBottomOf="@+id/survey_samcodetext"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="93dp"
+            android:layout_height="93dp"
+            app:srcCompat="@drawable/infalogo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="44dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.962" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
