GUI Changes- Added Background for layouts

--- a/demo/res/layout/fragment_construction.xml
+++ b/demo/res/layout/fragment_construction.xml
@@ -47,16 +47,17 @@
             android:id="@+id/construction_submitbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="93dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:fontFamily="serif-monospace"
             android:text="SUBMIT"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/construction_samcodetext"
-            android:layout_marginBottom="93dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
