--- a/demo/res/layout/fragment_maintenance.xml
+++ b/demo/res/layout/fragment_maintenance.xml
@@ -16,11 +16,12 @@
             android:layout_height="56dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:fontFamily="serif-monospace"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="44dp"
+            android:fontFamily="serif-monospace"
             android:text="Equipment Upkeep"
+            android:textStyle="bold"
             android:theme="@style/MyButton"
             app:layout_constraintHorizontal_bias="0.583"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -31,12 +32,13 @@
             android:id="@+id/faultremediationbutton"
             android:layout_width="154dp"
             android:layout_height="56dp"
-            android:fontFamily="serif-monospace"
             android:layout_alignStart="@+id/eqpupkeepbutton"
             android:layout_below="@+id/eqpupkeepbutton"
             android:layout_marginRight="8dp"
             android:layout_marginTop="44dp"
+            android:fontFamily="serif-monospace"
             android:text="Fault Remediation"
+            android:textStyle="bold"
             android:theme="@style/MyButton"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -73,15 +75,16 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            android:fontFamily="serif-monospace"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="serif-monospace"
             android:text="Submit"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/maintenance_samcodetext"
-            app:layout_constraintVertical_bias="0.645"
-            app:layout_constraintBottom_toTopOf="@+id/imageView3" />
+            app:layout_constraintVertical_bias="0.645" />
 
         <ImageView
             android:id="@+id/imageView3"
