--- a/demo/res/layout/activity_capture_image.xml
+++ b/demo/res/layout/activity_capture_image.xml
@@ -6,7 +6,8 @@
     android:layout_height="fill_parent"
     android:weightSum="1"
     android:baselineAligned="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/bluegradient">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,6 +16,7 @@
         <Button
             android:id="@+id/ugbutton"
             android:layout_width="170dp"
+            android:theme="@style/MyButton"
             android:layout_height="76dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -24,8 +26,7 @@
             app:layout_constraintRight_toLeftOf="@+id/imageView1"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            tools:layout_editor_absoluteX="17dp" />
+            android:layout_marginEnd="8dp" />
 
         <ImageView
             android:id="@+id/imageView1"
@@ -41,15 +42,36 @@
 
         <Button
             android:id="@+id/fibereqpbutton"
-            android:layout_width="368dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Upload Image"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:layout_marginTop="8dp"
+            android:text="Upload Image"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ugbutton"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
+            app:layout_constraintVertical_bias="0.818" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="93dp"
+            android:layout_height="93dp"
+            android:src="@drawable/infalogo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="28dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.962"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
