--- a/demo/res/layout/fragment_survey.xml
+++ b/demo/res/layout/fragment_survey.xml
@@ -114,7 +114,7 @@
             android:id="@+id/imageView3"
             android:layout_width="93dp"
             android:layout_height="93dp"
-            app:srcCompat="@drawable/infalogo"
+            android:src="@drawable/infalogo"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="44dp"
             android:layout_marginRight="8dp"
