--- a/demo/res/layout/activity_survey.xml
+++ b/demo/res/layout/activity_survey.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:layout="@layout/geojson_demo"/>
+        tools:layout="@layout/activity_survey"/>
 
 
 </LinearLayout>
