--- a/demo/res/layout/map.xml
+++ b/demo/res/layout/map.xml
@@ -4,4 +4,17 @@
           android:id="@+id/map"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.SupportMapFragment"/>
+          android:name="com.google.android.gms.maps.SupportMapFragment">
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|top"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/layers_icon"
+        />
+
+    </fragment>
+
