--- a/demo/res/values/styles.xml
+++ b/demo/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="colorControlHighlight">@color/colorPrimaryDark</item>
         <item name="colorButtonNormal">@color/colorAccent</item>
     </style>
+    <style name="DialogTheme">
+        <item name="android:windowEnterAnimation">@anim/slide_left</item>
+        <item name="android:windowExitAnimation">@anim/slide_right</item>
+    </style>
 </resources>
